구글인증+텍스트빼와서 서버로 보내기

--- a/popup.html
+++ b/popup.html
@@ -2,16 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>크롬 확장프로그램</title>
+    <title>크롬 확장프로그램 WIK</title>
     <style>
-        BODY {width : 520px; min-height:250px;}
+        BODY {width : 80px; min-height:15px;}
     </style>
 </head>
 <body>
 
-    <h1>크롬 확장프로그램 테스트</h1>
+    취소되었습니다.
 
-    <button id="clickme">click me</button>
+    <!--<button id="click_me">click me</button>-->
     <script type="text/javascript" src="popup.js"></script>
 
 </body>
