--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <!--<button id="revoke">Revoke token</button>-->
       </div>
       <div id="context">
-
+        <div id="divTable">
+        </div>
       </div>
     </div>
   </body>
