AWS Lamda 연동 테스트중

--- a/index.html
+++ b/index.html
@@ -2,19 +2,16 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>facebook chrome.identity example</title>
+    <title>아는단어</title>
     <script type="text/javascript" src="index.js"></script>
     <link rel="stylesheet" href="./wik_style.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   </head>
   <body>
     <div id="wrap">
-
-      <div id="loginarea">
-        <!--<button id="revoke">Revoke token</button>-->
-      </div>
+      <div id="loginarea"></div>
       <div id="context">
-        <div id="divTable">
-        </div>
+        <div id="divTable"></div>
       </div>
     </div>
   </body>
