--- a/index.html
+++ b/index.html
@@ -16,10 +16,7 @@
         <div id="divTable"></div>
       </div>
     </div>
-    <!--Loading the SDK for JavaScript-->
-    <!--<script src="https://sdk.amazonaws.com/js/aws-sdk-2.7.20.min.js"></script>-->
-    <!-- Amazon Cognito Identity SDK for JavaScript -->
-    <!--https://github.com/aws/amazon-cognito-identity-js/blob/58ed8837be982bd85d4728f43776855f99144ea6/README.md-->
+
     <script type="text/javascript" src="lib/apiGateway/axios/dist/axios.standalone.js"></script>
     <script type="text/javascript" src="lib/apiGateway/CryptoJS/rollups/hmac-sha256.js"></script>
     <script type="text/javascript" src="lib/apiGateway/CryptoJS/rollups/sha256.js"></script>
@@ -34,9 +31,11 @@
     <script src="lib/aws-cognito-sdk.min.js"></script>
     <script src="lib/amazon-cognito-identity.min.js"></script>
     <script src="lib/aws-sdk.js"></script>
+    <script src="lib/amazon-cognito.min.js"></script>
     <script type="text/javascript" src="lib/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="scripts/modal.js"></script>
     <script type="text/javascript" src="scripts/index.js"></script>
     <script type="text/javascript" src="scripts/awsCognito.js"></script>
+    <script type="text/javascript" src="scripts/userRegist.js"></script>
   </body>
 </html>
