--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <title>아는단어</title>
-    <link rel="stylesheet" href="stylesheet/modal.css">
     <link rel="stylesheet" href="stylesheet/wik_style.css">
+    <link rel="stylesheet" href="stylesheet/modal.css">
+    <link rel="stylesheet" href="stylesheet/taggle.css">
+    <link rel="stylesheet" href="stylesheet/projects.min.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   </head>
   <body>
@@ -16,7 +18,6 @@
         <div id="divTable"></div>
       </div>
     </div>
-
     <script type="text/javascript" src="lib/apiGateway/axios/dist/axios.standalone.js"></script>
     <script type="text/javascript" src="lib/apiGateway/CryptoJS/rollups/hmac-sha256.js"></script>
     <script type="text/javascript" src="lib/apiGateway/CryptoJS/rollups/sha256.js"></script>
@@ -32,7 +33,12 @@
     <script src="lib/amazon-cognito-identity.min.js"></script>
     <script src="lib/aws-sdk.js"></script>
     <script src="lib/amazon-cognito.min.js"></script>
-    <script type="text/javascript" src="lib/jquery-3.2.1.min.js"></script>
+    <!--<script type="text/javascript" src="lib/taggle.js/rainbow-custom.min.js"></script>-->
+    <!--<script type="text/javascript" src="lib/taggle.js/scripts.js"></script>-->
+    <!--<script type="text/javascript" src="lib/jquery-3.2.1.min.js"></script>-->
+    <script type="text/javascript" src="lib/taggle.js/jquery-1.10.1.js"></script>
+    <script type="text/javascript" src="lib/taggle.js/jquery-ui.js"></script>
+    <script type="text/javascript" src="lib/taggle.js/taggle.js"></script>
     <script type="text/javascript" src="scripts/modal.js"></script>
     <script type="text/javascript" src="scripts/index.js"></script>
     <script type="text/javascript" src="scripts/awsCognito.js"></script>
